--- a/src/common/stylus/base.styl
+++ b/src/common/stylus/base.styl
@@ -1,3 +1,10 @@
+// 设置默认样式
+body, html
+  font-family 'PingFang SC', 'STHeitiSC-Light', 'Helvetica-Light',arial,sans-serif
+  font-weight 200
+  line-height 1
+
+// 根据设备像素比缩放1像素下边框
 @media (-webkit-min-device-pixel-ratio: 1.5),(min-device-pixel-ratio: 1.5)
   .border-1px
     &::after
