--- a/src/common/stylus/mixin.styl
+++ b/src/common/stylus/mixin.styl
@@ -1,3 +1,4 @@
+// 1像素下边框
 border-1px($color)
   position relative
   &:after
@@ -8,3 +9,9 @@ border-1px($color)
     width 100%
     border-top 1px solid $color
     content ' '
+
+// 判断引入2x或3x图片
+bg-image($url)
+  background-image url($url+'@2x.png')
+  @media (-webkit-min-device-pixel-ratio: 3),(min-device-pixel-ratio: 3)
+    background-image url($url+'@3x.png')
