--- a/src/common/stylus/base.styl
+++ b/src/common/stylus/base.styl
@@ -4,6 +4,16 @@ body, html
   font-weight 200
   line-height 1
 
+.clearfix
+  display inline-block
+  &:after
+    display block
+    content '.'
+    height 0
+    line-height 0
+    clear both
+    visibility hidden
+
 // 根据设备像素比缩放1像素下边框
 @media (-webkit-min-device-pixel-ratio: 1.5),(min-device-pixel-ratio: 1.5)
   .border-1px
